[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["Daniel Correia <dan.reia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
gymnasium = {extras = ["classic-control"], version = "^0.29.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
